Vol Rolling Avgs

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -2217,8 +2217,404 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3afb2c5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== ROLLING VOLUME SUM CALCULATION ===\n",
+      "Calculating rolling volume sums...\n",
+      "=== SAMPLE DATA WITH ROLLING VOLUME SUMS ===\n",
+      "                  date    qty  volume_1min_sum  volume_5min_sum  \\\n",
+      "0  2025-08-07 09:15:00  65740          65740.0          65740.0   \n",
+      "1  2025-08-07 09:15:01    895          66635.0          66635.0   \n",
+      "2  2025-08-07 09:15:01   1401          68036.0          68036.0   \n",
+      "3  2025-08-07 09:15:02   1795          69831.0          69831.0   \n",
+      "4  2025-08-07 09:15:02    741          70572.0          70572.0   \n",
+      "5  2025-08-07 09:15:03   2717          73289.0          73289.0   \n",
+      "6  2025-08-07 09:15:03   9068          82357.0          82357.0   \n",
+      "7  2025-08-07 09:15:04   1141          83498.0          83498.0   \n",
+      "8  2025-08-07 09:15:04   1798          85296.0          85296.0   \n",
+      "9  2025-08-07 09:15:05   2092          87388.0          87388.0   \n",
+      "10 2025-08-07 09:15:05   1679          89067.0          89067.0   \n",
+      "11 2025-08-07 09:15:06   4519          93586.0          93586.0   \n",
+      "12 2025-08-07 09:15:06   1316          94902.0          94902.0   \n",
+      "13 2025-08-07 09:15:07   2858          97760.0          97760.0   \n",
+      "14 2025-08-07 09:15:07    640          98400.0          98400.0   \n",
+      "\n",
+      "    volume_15min_sum  volume_30min_sum  \n",
+      "0            65740.0           65740.0  \n",
+      "1            66635.0           66635.0  \n",
+      "2            68036.0           68036.0  \n",
+      "3            69831.0           69831.0  \n",
+      "4            70572.0           70572.0  \n",
+      "5            73289.0           73289.0  \n",
+      "6            82357.0           82357.0  \n",
+      "7            83498.0           83498.0  \n",
+      "8            85296.0           85296.0  \n",
+      "9            87388.0           87388.0  \n",
+      "10           89067.0           89067.0  \n",
+      "11           93586.0           93586.0  \n",
+      "12           94902.0           94902.0  \n",
+      "13           97760.0           97760.0  \n",
+      "14           98400.0           98400.0  \n",
+      "\n",
+      "=== ROLLING VOLUME SUM STATISTICS ===\n",
+      "\n",
+      "volume_1min_sum:\n",
+      "  Min: 3,271\n",
+      "  Max: 240,694\n",
+      "  Mean: 41,775\n",
+      "  Std: 40,998\n",
+      "\n",
+      "volume_5min_sum:\n",
+      "  Min: 44,608\n",
+      "  Max: 751,790\n",
+      "  Mean: 183,460\n",
+      "  Std: 118,364\n",
+      "\n",
+      "volume_15min_sum:\n",
+      "  Min: 65,740\n",
+      "  Max: 1,421,831\n",
+      "  Mean: 479,341\n",
+      "  Std: 213,644\n",
+      "\n",
+      "volume_30min_sum:\n",
+      "  Min: 65,740\n",
+      "  Max: 1,828,633\n",
+      "  Mean: 897,923\n",
+      "  Std: 342,277\n",
+      "\n",
+      "=== VOLUME ANALYSIS BY TIME WINDOWS ===\n",
+      "Volume comparison across timeframes:\n",
+      "  1-min average: 41,775\n",
+      "  5-min average: 183,460\n",
+      "  15-min average: 479,341\n",
+      "  30-min average: 897,923\n",
+      "\n",
+      "=== VOLUME INTENSITY ANALYSIS ===\n",
+      "Volume per minute for each window:\n",
+      "  1-min window: 41,775 per minute\n",
+      "  5-min window: 36,692 per minute\n",
+      "  15-min window: 31,956 per minute\n",
+      "  30-min window: 29,931 per minute\n",
+      "\n",
+      "=== VOLUME SPIKE DETECTION ===\n",
+      "volume_1min_sum: 629 periods above 123,771 (2σ threshold)\n",
+      "volume_5min_sum: 374 periods above 420,188 (2σ threshold)\n",
+      "volume_15min_sum: 334 periods above 906,628 (2σ threshold)\n",
+      "volume_30min_sum: 726 periods above 1,582,477 (2σ threshold)\n",
+      "\n",
+      "=== EXAMPLES OF VOLUME SPIKES ===\n",
+      "\n",
+      "volume_1min_sum spikes (top 3):\n",
+      "               date  volume_1min_sum  qty  price\n",
+      "2025-08-07 09:15:09         123896.0 1904  386.0\n",
+      "2025-08-07 09:15:10         124376.0  480  385.7\n",
+      "2025-08-07 09:15:10         130704.0 6328  386.0\n",
+      "\n",
+      "volume_5min_sum spikes (top 3):\n",
+      "               date  volume_5min_sum   qty  price\n",
+      "2025-08-07 09:17:00         424009.0  6377 387.60\n",
+      "2025-08-07 09:17:08         441708.0 17699 387.60\n",
+      "2025-08-07 09:17:09         446868.0  5160 387.55\n",
+      "\n",
+      "volume_15min_sum spikes (top 3):\n",
+      "               date  volume_15min_sum   qty  price\n",
+      "2025-08-07 09:20:49          932902.0 43873 389.85\n",
+      "2025-08-07 09:21:01          966465.0 33563 389.65\n",
+      "2025-08-07 09:21:01          967610.0  1145 389.55\n",
+      "\n",
+      "volume_30min_sum spikes (top 3):\n",
+      "               date  volume_30min_sum  qty  price\n",
+      "2025-08-07 09:35:12         1583813.0 4419 389.25\n",
+      "2025-08-07 09:35:19         1583994.0  181 389.20\n",
+      "2025-08-07 09:35:27         1586242.0 2248 389.25\n",
+      "\n",
+      "=== VOLUME TREND ANALYSIS ===\n",
+      "Volume 1Min:\n",
+      "  Increasing: 7,218 periods\n",
+      "  Decreasing: 3,706 periods\n",
+      "Volume 5Min:\n",
+      "  Increasing: 7,590 periods\n",
+      "  Decreasing: 3,342 periods\n",
+      "Volume 15Min:\n",
+      "  Increasing: 7,651 periods\n",
+      "  Decreasing: 3,280 periods\n",
+      "Volume 30Min:\n",
+      "  Increasing: 7,952 periods\n",
+      "  Decreasing: 2,980 periods\n",
+      "\n",
+      "=== VOLUME-PRICE CORRELATION ===\n",
+      "volume_1min_sum vs Price correlation: 0.1923\n",
+      "volume_5min_sum vs Price correlation: 0.4227\n",
+      "volume_15min_sum vs Price correlation: 0.5060\n",
+      "volume_30min_sum vs Price correlation: 0.4976\n",
+      "\n",
+      "Volume vs Price Change correlation:\n",
+      "volume_1min_sum vs Price Change correlation: 0.0107\n",
+      "volume_5min_sum vs Price Change correlation: 0.0141\n",
+      "volume_15min_sum vs Price Change correlation: 0.0065\n",
+      "volume_30min_sum vs Price Change correlation: 0.0019\n",
+      "\n",
+      "=== TIME-BASED VOLUME ANALYSIS ===\n",
+      "Total volume by hour:\n",
+      "  09:00 - 09:59: 2,164,111\n",
+      "  10:00 - 10:59: 1,436,774\n",
+      "  11:00 - 11:59: 1,340,606\n",
+      "  12:00 - 12:59: 1,462,840\n",
+      "  13:00 - 13:59: 1,428,015\n",
+      "  14:00 - 14:59: 1,985,212\n",
+      "  15:00 - 15:59: 1,692,613\n",
+      "\n",
+      "=== ROLLING VS CUMULATIVE VOLUME ===\n",
+      "Final cumulative volume: 11,466,759\n",
+      "Final 30-min rolling volume: 1,692,613\n",
+      "Rolling volume as % of total: 14.8%\n",
+      "\n",
+      "=== ROLLING VOLUME SUMMARY ===\n",
+      "✓ 1-minute rolling volume sum calculated\n",
+      "✓ 5-minute rolling volume sum calculated\n",
+      "✓ 15-minute rolling volume sum calculated\n",
+      "✓ 30-minute rolling volume sum calculated\n",
+      "✓ Volume intensity analysis completed\n",
+      "✓ Volume spike detection implemented\n",
+      "✓ Volume-price correlation analyzed\n",
+      "✓ Ready for volume-based analysis and trading signals\n",
+      "\n",
+      "=== UPDATED DATAFRAME INFO ===\n",
+      "Columns: ['date', 'price', 'qty', 'trnvr', 'cum_trnvr', 'date_only', 'time', 'hour', 'minute', 'second', 'price_change', 'direction', 'price_1min_avg', 'price_5min_avg', 'price_15min_avg', 'price_vs_1min', 'price_vs_5min', 'price_vs_15min', 'above_1min', 'above_5min', 'above_15min', 'ma_1min_5min_cross', 'ma_1min_5min_signal', 'ma_5min_15min_cross', 'ma_5min_15min_signal', 'ma_1min_slope', 'ma_5min_slope', 'ma_15min_slope', 'volume_1min_sum', 'volume_5min_sum', 'volume_15min_sum', 'volume_30min_sum', 'volume_1min_per_min', 'volume_5min_per_min', 'volume_15min_per_min', 'volume_30min_per_min', 'volume_1min_trend', 'volume_5min_trend', 'volume_15min_trend', 'volume_30min_trend']\n",
+      "Shape: (10956, 40)\n",
+      "New volume columns added:\n",
+      "  ✓ volume_1min_sum\n",
+      "  ✓ volume_5min_sum\n",
+      "  ✓ volume_15min_sum\n",
+      "  ✓ volume_30min_sum\n",
+      "  ✓ volume_1min_per_min\n",
+      "  ✓ volume_5min_per_min\n",
+      "  ✓ volume_15min_per_min\n",
+      "  ✓ volume_30min_per_min\n",
+      "  ✓ volume_1min_trend\n",
+      "  ✓ volume_5min_trend\n",
+      "  ✓ volume_15min_trend\n",
+      "  ✓ volume_30min_trend\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\559120730.py:11: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['volume_1min_sum'] = df_temp['qty'].rolling(window='1T', min_periods=1).sum()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\559120730.py:14: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['volume_5min_sum'] = df_temp['qty'].rolling(window='5T', min_periods=1).sum()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\559120730.py:17: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['volume_15min_sum'] = df_temp['qty'].rolling(window='15T', min_periods=1).sum()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\559120730.py:20: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['volume_30min_sum'] = df_temp['qty'].rolling(window='30T', min_periods=1).sum()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate rolling sum of volume over time windows\n",
+    "print(\"=== ROLLING VOLUME SUM CALCULATION ===\")\n",
+    "\n",
+    "# Ensure the dataframe is sorted by datetime and has datetime index\n",
+    "df_temp = df.set_index('date')\n",
+    "\n",
+    "# Calculate rolling sum of volume at different time intervals\n",
+    "print(\"Calculating rolling volume sums...\")\n",
+    "\n",
+    "# 1-minute rolling volume sum\n",
+    "df_temp['volume_1min_sum'] = df_temp['qty'].rolling(window='1T', min_periods=1).sum()\n",
+    "\n",
+    "# 5-minute rolling volume sum\n",
+    "df_temp['volume_5min_sum'] = df_temp['qty'].rolling(window='5T', min_periods=1).sum()\n",
+    "\n",
+    "# 15-minute rolling volume sum\n",
+    "df_temp['volume_15min_sum'] = df_temp['qty'].rolling(window='15T', min_periods=1).sum()\n",
+    "\n",
+    "# 30-minute rolling volume sum\n",
+    "df_temp['volume_30min_sum'] = df_temp['qty'].rolling(window='30T', min_periods=1).sum()\n",
+    "\n",
+    "# Reset index to get back to normal dataframe format\n",
+    "df = df_temp.reset_index()\n",
+    "\n",
+    "# Display sample data with rolling volume sums\n",
+    "print(\"=== SAMPLE DATA WITH ROLLING VOLUME SUMS ===\")\n",
+    "print(df[['date', 'qty', 'volume_1min_sum', 'volume_5min_sum', 'volume_15min_sum', 'volume_30min_sum']].head(15))\n",
+    "\n",
+    "# Basic statistics of rolling volume sums\n",
+    "print(f\"\\n=== ROLLING VOLUME SUM STATISTICS ===\")\n",
+    "volume_sum_cols = ['volume_1min_sum', 'volume_5min_sum', 'volume_15min_sum', 'volume_30min_sum']\n",
+    "\n",
+    "for col in volume_sum_cols:\n",
+    "    print(f\"\\n{col}:\")\n",
+    "    print(f\"  Min: {df[col].min():,.0f}\")\n",
+    "    print(f\"  Max: {df[col].max():,.0f}\")\n",
+    "    print(f\"  Mean: {df[col].mean():,.0f}\")\n",
+    "    print(f\"  Std: {df[col].std():,.0f}\")\n",
+    "\n",
+    "# Volume analysis by time windows\n",
+    "print(f\"\\n=== VOLUME ANALYSIS BY TIME WINDOWS ===\")\n",
+    "\n",
+    "# Compare volume across different timeframes\n",
+    "print(\"Volume comparison across timeframes:\")\n",
+    "print(f\"  1-min average: {df['volume_1min_sum'].mean():,.0f}\")\n",
+    "print(f\"  5-min average: {df['volume_5min_sum'].mean():,.0f}\")\n",
+    "print(f\"  15-min average: {df['volume_15min_sum'].mean():,.0f}\")\n",
+    "print(f\"  30-min average: {df['volume_30min_sum'].mean():,.0f}\")\n",
+    "\n",
+    "# Volume intensity analysis\n",
+    "print(f\"\\n=== VOLUME INTENSITY ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate volume per minute for each window\n",
+    "df['volume_1min_per_min'] = df['volume_1min_sum'] / 1\n",
+    "df['volume_5min_per_min'] = df['volume_5min_sum'] / 5\n",
+    "df['volume_15min_per_min'] = df['volume_15min_sum'] / 15\n",
+    "df['volume_30min_per_min'] = df['volume_30min_sum'] / 30\n",
+    "\n",
+    "print(\"Volume per minute for each window:\")\n",
+    "print(f\"  1-min window: {df['volume_1min_per_min'].mean():,.0f} per minute\")\n",
+    "print(f\"  5-min window: {df['volume_5min_per_min'].mean():,.0f} per minute\")\n",
+    "print(f\"  15-min window: {df['volume_15min_per_min'].mean():,.0f} per minute\")\n",
+    "print(f\"  30-min window: {df['volume_30min_per_min'].mean():,.0f} per minute\")\n",
+    "\n",
+    "# Volume spikes detection\n",
+    "print(f\"\\n=== VOLUME SPIKE DETECTION ===\")\n",
+    "\n",
+    "# Find periods of unusually high volume (above 2 standard deviations)\n",
+    "for col in volume_sum_cols:\n",
+    "    mean_vol = df[col].mean()\n",
+    "    std_vol = df[col].std()\n",
+    "    threshold = mean_vol + 2 * std_vol\n",
+    "    \n",
+    "    high_volume_periods = (df[col] > threshold).sum()\n",
+    "    print(f\"{col}: {high_volume_periods} periods above {threshold:,.0f} (2σ threshold)\")\n",
+    "\n",
+    "# Show examples of volume spikes\n",
+    "print(f\"\\n=== EXAMPLES OF VOLUME SPIKES ===\")\n",
+    "for col in volume_sum_cols:\n",
+    "    mean_vol = df[col].mean()\n",
+    "    std_vol = df[col].std()\n",
+    "    threshold = mean_vol + 2 * std_vol\n",
+    "    \n",
+    "    spikes = df[df[col] > threshold][['date', col, 'qty', 'price']].head(3)\n",
+    "    if len(spikes) > 0:\n",
+    "        print(f\"\\n{col} spikes (top 3):\")\n",
+    "        print(spikes.to_string(index=False))\n",
+    "\n",
+    "# Volume trend analysis\n",
+    "print(f\"\\n=== VOLUME TREND ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate volume trends (slopes) for each window\n",
+    "df['volume_1min_trend'] = df['volume_1min_sum'].diff()\n",
+    "df['volume_5min_trend'] = df['volume_5min_sum'].diff()\n",
+    "df['volume_15min_trend'] = df['volume_15min_sum'].diff()\n",
+    "df['volume_30min_trend'] = df['volume_30min_sum'].diff()\n",
+    "\n",
+    "# Count increasing vs decreasing volume periods\n",
+    "for col in ['volume_1min_trend', 'volume_5min_trend', 'volume_15min_trend', 'volume_30min_trend']:\n",
+    "    increasing = (df[col] > 0).sum()\n",
+    "    decreasing = (df[col] < 0).sum()\n",
+    "    window_name = col.replace('_trend', '').replace('_', ' ').title()\n",
+    "    print(f\"{window_name}:\")\n",
+    "    print(f\"  Increasing: {increasing:,} periods\")\n",
+    "    print(f\"  Decreasing: {decreasing:,} periods\")\n",
+    "\n",
+    "# Volume vs Price correlation\n",
+    "print(f\"\\n=== VOLUME-PRICE CORRELATION ===\")\n",
+    "\n",
+    "# Calculate correlation between volume and price for each timeframe\n",
+    "for col in volume_sum_cols:\n",
+    "    correlation = df[col].corr(df['price'])\n",
+    "    print(f\"{col} vs Price correlation: {correlation:.4f}\")\n",
+    "\n",
+    "# Volume vs Price change correlation\n",
+    "print(f\"\\nVolume vs Price Change correlation:\")\n",
+    "for col in volume_sum_cols:\n",
+    "    correlation = df[col].corr(df['price_change'])\n",
+    "    print(f\"{col} vs Price Change correlation: {correlation:.4f}\")\n",
+    "\n",
+    "# Time-based volume analysis\n",
+    "print(f\"\\n=== TIME-BASED VOLUME ANALYSIS ===\")\n",
+    "\n",
+    "# Volume by hour of the day\n",
+    "df['hour'] = df['date'].dt.hour\n",
+    "hourly_volume = df.groupby('hour')['qty'].sum()\n",
+    "print(\"Total volume by hour:\")\n",
+    "for hour, volume in hourly_volume.items():\n",
+    "    print(f\"  {hour:02d}:00 - {hour:02d}:59: {volume:,}\")\n",
+    "\n",
+    "# Rolling volume vs cumulative volume comparison\n",
+    "print(f\"\\n=== ROLLING VS CUMULATIVE VOLUME ===\")\n",
+    "print(f\"Final cumulative volume: {df['cum_trnvr'].iloc[-1]/df['price'].iloc[-1]:,.0f}\")\n",
+    "print(f\"Final 30-min rolling volume: {df['volume_30min_sum'].iloc[-1]:,.0f}\")\n",
+    "print(f\"Rolling volume as % of total: {(df['volume_30min_sum'].iloc[-1]/(df['cum_trnvr'].iloc[-1]/df['price'].iloc[-1])*100):.1f}%\")\n",
+    "\n",
+    "# Summary\n",
+    "print(f\"\\n=== ROLLING VOLUME SUMMARY ===\")\n",
+    "print(f\"✓ 1-minute rolling volume sum calculated\")\n",
+    "print(f\"✓ 5-minute rolling volume sum calculated\")\n",
+    "print(f\"✓ 15-minute rolling volume sum calculated\")\n",
+    "print(f\"✓ 30-minute rolling volume sum calculated\")\n",
+    "print(f\"✓ Volume intensity analysis completed\")\n",
+    "print(f\"✓ Volume spike detection implemented\")\n",
+    "print(f\"✓ Volume-price correlation analyzed\")\n",
+    "print(f\"✓ Ready for volume-based analysis and trading signals\")\n",
+    "\n",
+    "# Display final dataframe info\n",
+    "print(f\"\\n=== UPDATED DATAFRAME INFO ===\")\n",
+    "print(f\"Columns: {list(df.columns)}\")\n",
+    "print(f\"Shape: {df.shape}\")\n",
+    "print(f\"New volume columns added:\")\n",
+    "volume_new_cols = ['volume_1min_sum', 'volume_5min_sum', 'volume_15min_sum', 'volume_30min_sum',\n",
+    "                   'volume_1min_per_min', 'volume_5min_per_min', 'volume_15min_per_min', 'volume_30min_per_min',\n",
+    "                   'volume_1min_trend', 'volume_5min_trend', 'volume_15min_trend', 'volume_30min_trend']\n",
+    "for col in volume_new_cols:\n",
+    "    if col in df.columns:\n",
+    "        print(f\"  ✓ {col}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c267ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a5adb35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "465a5193",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f4fbac2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82467e96",
    "metadata": {},
    "outputs": [],
    "source": []
