--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -2581,11 +2581,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9c267ea8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== VWAP CALCULATION ===\n",
+      "Calculating VWAP...\n",
+      "=== OVERALL VWAP ===\n",
+      "Total volume: 11,510,171\n",
+      "Total price × volume: ₹4,451,969,111.70\n",
+      "Overall VWAP: ₹386.79\n",
+      "\n",
+      "=== ROLLING VWAP CALCULATION ===\n",
+      "=== SAMPLE DATA WITH VWAP VALUES ===\n",
+      "                  date   price    qty   vwap_1min   vwap_5min  vwap_15min  \\\n",
+      "0  2025-08-07 09:15:00  386.85  65740  386.850000  386.850000  386.850000   \n",
+      "1  2025-08-07 09:15:01  386.30    895  386.842613  386.842613  386.842613   \n",
+      "2  2025-08-07 09:15:01  386.75   1401  386.840706  386.840706  386.840706   \n",
+      "3  2025-08-07 09:15:02  386.80   1795  386.839659  386.839659  386.839659   \n",
+      "4  2025-08-07 09:15:02  386.95    741  386.840818  386.840818  386.840818   \n",
+      "5  2025-08-07 09:15:03  386.90   2717  386.843012  386.843012  386.843012   \n",
+      "6  2025-08-07 09:15:03  386.80   9068  386.838276  386.838276  386.838276   \n",
+      "7  2025-08-07 09:15:04  386.75   1141  386.837070  386.837070  386.837070   \n",
+      "8  2025-08-07 09:15:04  386.90   1798  386.838396  386.838396  386.838396   \n",
+      "9  2025-08-07 09:15:05  386.65   2092  386.833886  386.833886  386.833886   \n",
+      "10 2025-08-07 09:15:05  386.75   1679  386.832305  386.832305  386.832305   \n",
+      "11 2025-08-07 09:15:06  386.65   4519  386.823502  386.823502  386.823502   \n",
+      "12 2025-08-07 09:15:06  386.55   1316  386.819709  386.819709  386.819709   \n",
+      "13 2025-08-07 09:15:07  386.40   2858  386.807439  386.807439  386.807439   \n",
+      "14 2025-08-07 09:15:07  386.10    640  386.802838  386.802838  386.802838   \n",
+      "\n",
+      "    vwap_30min  \n",
+      "0   386.850000  \n",
+      "1   386.842613  \n",
+      "2   386.840706  \n",
+      "3   386.839659  \n",
+      "4   386.840818  \n",
+      "5   386.843012  \n",
+      "6   386.838276  \n",
+      "7   386.837070  \n",
+      "8   386.838396  \n",
+      "9   386.833886  \n",
+      "10  386.832305  \n",
+      "11  386.823502  \n",
+      "12  386.819709  \n",
+      "13  386.807439  \n",
+      "14  386.802838  \n",
+      "\n",
+      "=== VWAP STATISTICS ===\n",
+      "\n",
+      "vwap_1min:\n",
+      "  Min: ₹383.54\n",
+      "  Max: ₹383.54\n",
+      "  Mean: ₹386.55\n",
+      "  Std: ₹1.56\n",
+      "\n",
+      "vwap_5min:\n",
+      "  Min: ₹383.66\n",
+      "  Max: ₹383.66\n",
+      "  Mean: ₹386.52\n",
+      "  Std: ₹1.50\n",
+      "\n",
+      "vwap_15min:\n",
+      "  Min: ₹383.79\n",
+      "  Max: ₹383.79\n",
+      "  Mean: ₹386.48\n",
+      "  Std: ₹1.42\n",
+      "\n",
+      "vwap_30min:\n",
+      "  Min: ₹384.00\n",
+      "  Max: ₹384.00\n",
+      "  Mean: ₹386.47\n",
+      "  Std: ₹1.38\n",
+      "\n",
+      "=== PRICE VS VWAP ANALYSIS ===\n",
+      "Price position relative to VWAP:\n",
+      "\n",
+      "  1min VWAP:\n",
+      "    Above: 5,375 times (49.1%)\n",
+      "    Below: 5,580 times (50.9%)\n",
+      "    Equal: 1 times (0.0%)\n",
+      "\n",
+      "  5min VWAP:\n",
+      "    Above: 5,725 times (52.3%)\n",
+      "    Below: 5,230 times (47.7%)\n",
+      "    Equal: 1 times (0.0%)\n",
+      "\n",
+      "  15min VWAP:\n",
+      "    Above: 5,933 times (54.2%)\n",
+      "    Below: 5,022 times (45.8%)\n",
+      "    Equal: 1 times (0.0%)\n",
+      "\n",
+      "  30min VWAP:\n",
+      "    Above: 5,696 times (52.0%)\n",
+      "    Below: 5,259 times (48.0%)\n",
+      "    Equal: 1 times (0.0%)\n",
+      "\n",
+      "=== VWAP AS SUPPORT/RESISTANCE ===\n",
+      "1min VWAP: 10,780 times price within 0.1% of VWAP\n",
+      "5min VWAP: 9,278 times price within 0.1% of VWAP\n",
+      "15min VWAP: 6,740 times price within 0.1% of VWAP\n",
+      "30min VWAP: 4,183 times price within 0.1% of VWAP\n",
+      "\n",
+      "=== VWAP CROSSOVER ANALYSIS ===\n",
+      "1min VWAP crossovers:\n",
+      "  Bullish (price crosses above): 932\n",
+      "  Bearish (price crosses below): 931\n",
+      "5min VWAP crossovers:\n",
+      "  Bullish (price crosses above): 427\n",
+      "  Bearish (price crosses below): 427\n",
+      "15min VWAP crossovers:\n",
+      "  Bullish (price crosses above): 215\n",
+      "  Bearish (price crosses below): 214\n",
+      "30min VWAP crossovers:\n",
+      "  Bullish (price crosses above): 135\n",
+      "  Bearish (price crosses below): 134\n",
+      "\n",
+      "=== VWAP TREND ANALYSIS ===\n",
+      "1min VWAP trends:\n",
+      "  Upward: 5,522 periods\n",
+      "  Downward: 5,430 periods\n",
+      "5min VWAP trends:\n",
+      "  Upward: 5,691 periods\n",
+      "  Downward: 5,264 periods\n",
+      "15min VWAP trends:\n",
+      "  Upward: 5,766 periods\n",
+      "  Downward: 5,188 periods\n",
+      "30min VWAP trends:\n",
+      "  Upward: 5,418 periods\n",
+      "  Downward: 5,537 periods\n",
+      "\n",
+      "=== VWAP VS SIMPLE MOVING AVERAGE ===\n",
+      "VWAP vs Simple Price Average:\n",
+      "  Overall VWAP: ₹386.79\n",
+      "  Simple Price Average: ₹386.56\n",
+      "  Difference: ₹0.22\n",
+      "  vwap_1min vs Price correlation: 0.9949\n",
+      "  vwap_5min vs Price correlation: 0.9767\n",
+      "  vwap_15min vs Price correlation: 0.9531\n",
+      "  vwap_30min vs Price correlation: 0.9216\n",
+      "\n",
+      "=== VWAP TRADING SIGNALS ===\n",
+      "VWAP-based trading signals (using 15-min VWAP):\n",
+      "  Buy: 5,933 times (54.2%)\n",
+      "  Sell: 5,022 times (45.8%)\n",
+      "  Hold: 1 times (0.0%)\n",
+      "\n",
+      "=== VWAP SUMMARY ===\n",
+      "✓ Overall VWAP: ₹386.79\n",
+      "✓ Rolling VWAP calculated for 1min, 5min, 15min, 30min windows\n",
+      "✓ Price vs VWAP analysis completed\n",
+      "✓ VWAP crossover signals generated\n",
+      "✓ VWAP trend analysis completed\n",
+      "✓ Trading signals based on VWAP generated\n",
+      "✓ Ready for VWAP-based trading strategies\n",
+      "\n",
+      "=== UPDATED DATAFRAME INFO ===\n",
+      "Columns: ['date', 'price', 'qty', 'trnvr', 'cum_trnvr', 'date_only', 'time', 'hour', 'minute', 'second', 'price_change', 'direction', 'price_1min_avg', 'price_5min_avg', 'price_15min_avg', 'price_vs_1min', 'price_vs_5min', 'price_vs_15min', 'above_1min', 'above_5min', 'above_15min', 'ma_1min_5min_cross', 'ma_1min_5min_signal', 'ma_5min_15min_cross', 'ma_5min_15min_signal', 'ma_1min_slope', 'ma_5min_slope', 'ma_15min_slope', 'volume_1min_sum', 'volume_5min_sum', 'volume_15min_sum', 'volume_30min_sum', 'volume_1min_per_min', 'volume_5min_per_min', 'volume_15min_per_min', 'volume_30min_per_min', 'volume_1min_trend', 'volume_5min_trend', 'volume_15min_trend', 'volume_30min_trend', 'vwap_1min', 'vwap_5min', 'vwap_15min', 'vwap_30min', 'price_vs_vwap_1min', 'price_vs_vwap_5min', 'price_vs_vwap_15min', 'price_vs_vwap_30min', 'above_vwap_1min', 'vwap_1min_cross', 'vwap_1min_signal', 'above_vwap_5min', 'vwap_5min_cross', 'vwap_5min_signal', 'above_vwap_15min', 'vwap_15min_cross', 'vwap_15min_signal', 'above_vwap_30min', 'vwap_30min_cross', 'vwap_30min_signal', 'vwap_1min_trend', 'vwap_5min_trend', 'vwap_15min_trend', 'vwap_30min_trend', 'vwap_signal']\n",
+      "Shape: (10956, 65)\n",
+      "New VWAP columns added:\n",
+      "  ✓ vwap_1min\n",
+      "  ✓ vwap_5min\n",
+      "  ✓ vwap_15min\n",
+      "  ✓ vwap_30min\n",
+      "  ✓ price_vs_vwap_1min\n",
+      "  ✓ price_vs_vwap_5min\n",
+      "  ✓ price_vs_vwap_15min\n",
+      "  ✓ price_vs_vwap_30min\n",
+      "  ✓ above_vwap_1min\n",
+      "  ✓ above_vwap_5min\n",
+      "  ✓ above_vwap_15min\n",
+      "  ✓ above_vwap_30min\n",
+      "  ✓ vwap_1min_cross\n",
+      "  ✓ vwap_5min_cross\n",
+      "  ✓ vwap_15min_cross\n",
+      "  ✓ vwap_30min_cross\n",
+      "  ✓ vwap_1min_signal\n",
+      "  ✓ vwap_5min_signal\n",
+      "  ✓ vwap_15min_signal\n",
+      "  ✓ vwap_30min_signal\n",
+      "  ✓ vwap_1min_trend\n",
+      "  ✓ vwap_5min_trend\n",
+      "  ✓ vwap_15min_trend\n",
+      "  ✓ vwap_30min_trend\n",
+      "  ✓ vwap_signal\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\3292836047.py:24: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['vwap_1min'] = (df_temp['price'] * df_temp['qty']).rolling(window='1T', min_periods=1).sum() / df_temp['qty'].rolling(window='1T', min_periods=1).sum()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\3292836047.py:26: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['vwap_5min'] = (df_temp['price'] * df_temp['qty']).rolling(window='5T', min_periods=1).sum() / df_temp['qty'].rolling(window='5T', min_periods=1).sum()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\3292836047.py:28: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['vwap_15min'] = (df_temp['price'] * df_temp['qty']).rolling(window='15T', min_periods=1).sum() / df_temp['qty'].rolling(window='15T', min_periods=1).sum()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\3292836047.py:30: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['vwap_30min'] = (df_temp['price'] * df_temp['qty']).rolling(window='30T', min_periods=1).sum() / df_temp['qty'].rolling(window='30T', min_periods=1).sum()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute VWAP (Volume Weighted Average Price)\n",
+    "print(\"=== VWAP CALCULATION ===\")\n",
+    "\n",
+    "# Calculate VWAP for the entire dataset\n",
+    "print(\"Calculating VWAP...\")\n",
+    "\n",
+    "# Method 1: Simple VWAP for entire dataset\n",
+    "total_volume = df['qty'].sum()\n",
+    "total_price_volume = (df['price'] * df['qty']).sum()\n",
+    "vwap_total = total_price_volume / total_volume\n",
+    "\n",
+    "print(f\"=== OVERALL VWAP ===\")\n",
+    "print(f\"Total volume: {total_volume:,}\")\n",
+    "print(f\"Total price × volume: ₹{total_price_volume:,.2f}\")\n",
+    "print(f\"Overall VWAP: ₹{vwap_total:.2f}\")\n",
+    "\n",
+    "# Method 2: Rolling VWAP over different time windows\n",
+    "print(f\"\\n=== ROLLING VWAP CALCULATION ===\")\n",
+    "\n",
+    "# Ensure datetime index for time-based rolling\n",
+    "df_temp = df.set_index('date')\n",
+    "\n",
+    "# Calculate rolling VWAP for different time windows\n",
+    "df_temp['vwap_1min'] = (df_temp['price'] * df_temp['qty']).rolling(window='1T', min_periods=1).sum() / df_temp['qty'].rolling(window='1T', min_periods=1).sum()\n",
+    "\n",
+    "df_temp['vwap_5min'] = (df_temp['price'] * df_temp['qty']).rolling(window='5T', min_periods=1).sum() / df_temp['qty'].rolling(window='5T', min_periods=1).sum()\n",
+    "\n",
+    "df_temp['vwap_15min'] = (df_temp['price'] * df_temp['qty']).rolling(window='15T', min_periods=1).sum() / df_temp['qty'].rolling(window='15T', min_periods=1).sum()\n",
+    "\n",
+    "df_temp['vwap_30min'] = (df_temp['price'] * df_temp['qty']).rolling(window='30T', min_periods=1).sum() / df_temp['qty'].rolling(window='30T', min_periods=1).sum()\n",
+    "\n",
+    "# Reset index\n",
+    "df = df_temp.reset_index()\n",
+    "\n",
+    "# Display sample data with VWAP values\n",
+    "print(\"=== SAMPLE DATA WITH VWAP VALUES ===\")\n",
+    "print(df[['date', 'price', 'qty', 'vwap_1min', 'vwap_5min', 'vwap_15min', 'vwap_30min']].head(15))\n",
+    "\n",
+    "# VWAP Statistics\n",
+    "print(f\"\\n=== VWAP STATISTICS ===\")\n",
+    "vwap_cols = ['vwap_1min', 'vwap_5min', 'vwap_15min', 'vwap_30min']\n",
+    "\n",
+    "for col in vwap_cols:\n",
+    "    print(f\"\\n{col}:\")\n",
+    "    print(f\"  Min: ₹{df[col].min():.2f}\")\n",
+    "    print(f\"  Max: ₹{df[col].min():.2f}\")\n",
+    "    print(f\"  Mean: ₹{df[col].mean():.2f}\")\n",
+    "    print(f\"  Std: ₹{df[col].std():.2f}\")\n",
+    "\n",
+    "# Price vs VWAP Analysis\n",
+    "print(f\"\\n=== PRICE VS VWAP ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate price position relative to each VWAP\n",
+    "df['price_vs_vwap_1min'] = df['price'] - df['vwap_1min']\n",
+    "df['price_vs_vwap_5min'] = df['price'] - df['vwap_5min']\n",
+    "df['price_vs_vwap_15min'] = df['price'] - df['vwap_15min']\n",
+    "df['price_vs_vwap_30min'] = df['price'] - df['vwap_30min']\n",
+    "\n",
+    "# Count how many times price is above/below each VWAP\n",
+    "print(\"Price position relative to VWAP:\")\n",
+    "for i, vwap_type in enumerate(['1min', '5min', '15min', '30min']):\n",
+    "    col = f'price_vs_vwap_{vwap_type}'\n",
+    "    above_count = (df[col] > 0).sum()\n",
+    "    below_count = (df[col] < 0).sum()\n",
+    "    equal_count = (df[col] == 0).sum()\n",
+    "    \n",
+    "    print(f\"\\n  {vwap_type} VWAP:\")\n",
+    "    print(f\"    Above: {above_count:,} times ({(above_count/len(df)*100):.1f}%)\")\n",
+    "    print(f\"    Below: {below_count:,} times ({(below_count/len(df)*100):.1f}%)\")\n",
+    "    print(f\"    Equal: {equal_count:,} times ({(equal_count/len(df)*100):.1f}%)\")\n",
+    "\n",
+    "# VWAP as Support/Resistance\n",
+    "print(f\"\\n=== VWAP AS SUPPORT/RESISTANCE ===\")\n",
+    "\n",
+    "# Find periods when price bounces off VWAP\n",
+    "for i, vwap_type in enumerate(['1min', '5min', '15min', '30min']):\n",
+    "    vwap_col = f'vwap_{vwap_type}'\n",
+    "    price_vs_col = f'price_vs_vwap_{vwap_type}'\n",
+    "    \n",
+    "    # Find when price is very close to VWAP (within 0.1%)\n",
+    "    close_to_vwap = (abs(df[price_vs_col]) / df[vwap_col] * 100) < 0.1\n",
+    "    close_count = close_to_vwap.sum()\n",
+    "    \n",
+    "    print(f\"{vwap_type} VWAP: {close_count:,} times price within 0.1% of VWAP\")\n",
+    "\n",
+    "# VWAP Crossover Analysis\n",
+    "print(f\"\\n=== VWAP CROSSOVER ANALYSIS ===\")\n",
+    "\n",
+    "# Price crossing above/below VWAP\n",
+    "for i, vwap_type in enumerate(['1min', '5min', '15min', '30min']):\n",
+    "    price_vs_col = f'price_vs_vwap_{vwap_type}'\n",
+    "    \n",
+    "    # Create crossover signals\n",
+    "    df[f'above_vwap_{vwap_type}'] = df[price_vs_col] > 0\n",
+    "    df[f'vwap_{vwap_type}_cross'] = df[f'above_vwap_{vwap_type}'].astype(int)\n",
+    "    df[f'vwap_{vwap_type}_signal'] = df[f'vwap_{vwap_type}_cross'].diff()\n",
+    "    \n",
+    "    # Count crossovers\n",
+    "    bullish_crosses = (df[f'vwap_{vwap_type}_signal'] == 1).sum()\n",
+    "    bearish_crosses = (df[f'vwap_{vwap_type}_signal'] == -1).sum()\n",
+    "    \n",
+    "    print(f\"{vwap_type} VWAP crossovers:\")\n",
+    "    print(f\"  Bullish (price crosses above): {bullish_crosses}\")\n",
+    "    print(f\"  Bearish (price crosses below): {bearish_crosses}\")\n",
+    "\n",
+    "# VWAP Trend Analysis\n",
+    "print(f\"\\n=== VWAP TREND ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate VWAP trends (slopes)\n",
+    "df['vwap_1min_trend'] = df['vwap_1min'].diff()\n",
+    "df['vwap_5min_trend'] = df['vwap_5min'].diff()\n",
+    "df['vwap_15min_trend'] = df['vwap_15min'].diff()\n",
+    "df['vwap_30min_trend'] = df['vwap_30min'].diff()\n",
+    "\n",
+    "# Count trending periods\n",
+    "for i, vwap_type in enumerate(['1min', '5min', '15min', '30min']):\n",
+    "    trend_col = f'vwap_{vwap_type}_trend'\n",
+    "    up_trend = (df[trend_col] > 0).sum()\n",
+    "    down_trend = (df[trend_col] < 0).sum()\n",
+    "    \n",
+    "    print(f\"{vwap_type} VWAP trends:\")\n",
+    "    print(f\"  Upward: {up_trend:,} periods\")\n",
+    "    print(f\"  Downward: {down_trend:,} periods\")\n",
+    "\n",
+    "# VWAP vs Simple Moving Average Comparison\n",
+    "print(f\"\\n=== VWAP VS SIMPLE MOVING AVERAGE ===\")\n",
+    "\n",
+    "# Compare VWAP with price averages\n",
+    "print(\"VWAP vs Simple Price Average:\")\n",
+    "print(f\"  Overall VWAP: ₹{vwap_total:.2f}\")\n",
+    "print(f\"  Simple Price Average: ₹{df['price'].mean():.2f}\")\n",
+    "print(f\"  Difference: ₹{vwap_total - df['price'].mean():.2f}\")\n",
+    "\n",
+    "# Show correlation between VWAP and price\n",
+    "for col in vwap_cols:\n",
+    "    correlation = df[col].corr(df['price'])\n",
+    "    print(f\"  {col} vs Price correlation: {correlation:.4f}\")\n",
+    "\n",
+    "# Trading Signals based on VWAP\n",
+    "print(f\"\\n=== VWAP TRADING SIGNALS ===\")\n",
+    "\n",
+    "# Generate basic trading signals\n",
+    "df['vwap_signal'] = 'Hold'\n",
+    "df.loc[df['price'] > df['vwap_15min'], 'vwap_signal'] = 'Buy'\n",
+    "df.loc[df['price'] < df['vwap_15min'], 'vwap_signal'] = 'Sell'\n",
+    "\n",
+    "signal_counts = df['vwap_signal'].value_counts()\n",
+    "print(\"VWAP-based trading signals (using 15-min VWAP):\")\n",
+    "for signal, count in signal_counts.items():\n",
+    "    print(f\"  {signal}: {count:,} times ({(count/len(df)*100):.1f}%)\")\n",
+    "\n",
+    "# Summary\n",
+    "print(f\"\\n=== VWAP SUMMARY ===\")\n",
+    "print(f\"✓ Overall VWAP: ₹{vwap_total:.2f}\")\n",
+    "print(f\"✓ Rolling VWAP calculated for 1min, 5min, 15min, 30min windows\")\n",
+    "print(f\"✓ Price vs VWAP analysis completed\")\n",
+    "print(f\"✓ VWAP crossover signals generated\")\n",
+    "print(f\"✓ VWAP trend analysis completed\")\n",
+    "print(f\"✓ Trading signals based on VWAP generated\")\n",
+    "print(f\"✓ Ready for VWAP-based trading strategies\")\n",
+    "\n",
+    "# Display final dataframe info\n",
+    "print(f\"\\n=== UPDATED DATAFRAME INFO ===\")\n",
+    "print(f\"Columns: {list(df.columns)}\")\n",
+    "print(f\"Shape: {df.shape}\")\n",
+    "print(f\"New VWAP columns added:\")\n",
+    "vwap_new_cols = ['vwap_1min', 'vwap_5min', 'vwap_15min', 'vwap_30min',\n",
+    "                  'price_vs_vwap_1min', 'price_vs_vwap_5min', 'price_vs_vwap_15min', 'price_vs_vwap_30min',\n",
+    "                  'above_vwap_1min', 'above_vwap_5min', 'above_vwap_15min', 'above_vwap_30min',\n",
+    "                  'vwap_1min_cross', 'vwap_5min_cross', 'vwap_15min_cross', 'vwap_30min_cross',\n",
+    "                  'vwap_1min_signal', 'vwap_5min_signal', 'vwap_15min_signal', 'vwap_30min_signal',\n",
+    "                  'vwap_1min_trend', 'vwap_5min_trend', 'vwap_15min_trend', 'vwap_30min_trend',\n",
+    "                  'vwap_signal']\n",
+    "for col in vwap_new_cols:\n",
+    "    if col in df.columns:\n",
+    "        print(f\"  ✓ {col}\")"
+   ]
   },
   {
    "cell_type": "code",
